--- a/.github/workflows/02.scheduled-exec.yaml
+++ b/.github/workflows/02.scheduled-exec.yaml
@@ -1,7 +1,7 @@
-# CI de Nível 01 - Disparo manual a partir de 1 clique
+# CI de Nível 02 - Disparo Programado
 
 # nome do nosso 'pipeline'
-name: 'Execução Manual'
+name: 'Execução Programada de Testes E2E'
 
 # gatilho de execução manual
 on:
