--- a/.github/workflows/03-push-exec.yaml
+++ b/.github/workflows/03-push-exec.yaml
@@ -1,33 +1,47 @@
-# CI de Nível 03 - Execução Automática em Push
+# CI de Nível 03 - Disparo após a conclusão de um pipeline
 
-name: 'Execução Automática - Push na main'
+# nome do nosso 'pipeline'
+name: 'Execução por Deploy'
+
+#regras de disparo (gatilhos/triggers) do pipeline
+# gatilho de execução manual
+# gatilho de execução agendada = scheduled
+# gatilho de execução a partir  de outro pipe = workflow_run
 
 on:
-  push:
-    branches:
-      - main # ou outro branch principal, como 'master' ou 'develop'
+  workflow_run:
+    workflows: ['Execução Manual']
+    types:
+      - completed
 
+# trabalhos/tarefas dentro do pipeline
 jobs:
   e2e-tests:
+    # máquina que o job vai rodar
     runs-on: ubuntu-latest
 
+    # passos do script
     steps:
-      - name: Clonando o repositório
-        uses: actions/checkout@v4
+      # clone do projeto
+      - uses: actions/checkout@v4
 
-      - name: Configurando Node.js
-        uses: actions/setup-node@v4
+      # instalação do Node.js
+      - uses: actions/setup-node@v4
         with:
           node-version: 'latest'
 
+      # instalação do Yarn
       - name: Instalando Yarn
         run: npm install -g yarn
 
+      # instalação das dependências do projeto
       - name: Instalando dependências
         run: yarn
 
+      # instalação do Playwright
       - name: Instalando Playwright
         run: yarn playwright install
 
+      # execução dos testes E2E
       - name: Executando testes E2E
         run: yarn run e2e
