ci: adicionando condicional n3

--- a/.github/workflows/03-push-exec.yaml
+++ b/.github/workflows/03-push-exec.yaml
@@ -20,6 +20,9 @@ jobs:
     # máquina que o job vai rodar
     runs-on: ubuntu-latest
 
+    # condicional - if
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
     # passos do script
     steps:
       # clone do projeto
