--- a/.github/workflows/03-push-exec.yaml
+++ b/.github/workflows/03-push-exec.yaml
@@ -48,3 +48,9 @@ jobs:
       # execução dos testes E2E
       - name: Executando testes E2E
         run: yarn run e2e
+
+      - uses: actions/upload-artifact@v4
+      if: ${{ canceled() }}
+        with:
+          name: relatorio
+          path: ./playwright-report  
