ci: adicionando pipe n4 correção

--- a/.github/workflows/04-integreited-exec.yaml
+++ b/.github/workflows/04-integreited-exec.yaml
@@ -18,8 +18,8 @@ jobs:
       - name: Instalando dependências
         run: yarn
 
-      - name: Corrigindo padronizacao do código com Prettier
-        run: prettier --write --ignore-path .gitignore .
+      - name: Checando padronizacao do código
+        run: yarn lint
 
   unidade:
     runs-on: ubuntu-latest
